<resources>
    <string name="app_name">IndieTour</string>
    <string name="t11">SPECIFIC OBJECTIVES</string>
    <string name="t12">This code is a guideline of conduct to enable the Indian travel and tourism industry to:
\n1. Encourage tourism activities to be undertaken with respect for basic rights like dignity, safety and freedom from exploitation of both tourists and local residents i.e people and communities who may be impacted by tourism in some way.
\n2. Aid the prevention of prostitution, sex tourism and forms of sexual exploitations like assaults and molestations in tourism to safeguard the safety of persons, in particular women and children.
\n3. To enhance prevention of activities like forced or involuntary drug use, manipulated and incorrect information, cultural and social intolerance which could increase vulnerability to crime.
</string>
    <string name="t21">APPLICABILITY</string>
    <string name="t22">This code of conduct shall be applicable to all the owners, suppliers, contractors, employees of the travel and tour sector including hotels, restaurants, lodges, guest houses, tour agents, entertainment establishments etc. In addition, it shall be applicable to service providers like event management organizations, entertainment providers,transport operators like taxis, buses, tour guides and other services or agencies associated with the tourism sector. This is not a legally binding instrument but a set of guidelines for the tourism industry. In addition to these guidelines, included in this code are key messages that signatories are encouraged to use.
</string>
    <string name="t31">GUIDELINES FOR THE TOURISM INDUSTRY </string>
    <string name="t32">>>> Information &amp; training of personnel:
.Management will take up measures to build awareness and train staff on the guidelines of this code and appropriate legal provisions to enhance vigilance and to ensure that personnel act in a manner that promotes the safety of tourists, local residents and their own staff.
.In case of exploitation please call the Child line-1098, Women Help lines- 1091 and/or contact relevant authorities like the police or travel and tour
operators.
.All hotels and tour operators shall train and maintain two persons as focal points to ensure that all safety norms and guidelines of this code are adhered to. The officers shall provide correct information to tourists, like information on Child Help lines- 1098, Women Help lines- 1091, local police helpline 100 and also act as a liaison officer
with agencies such as the local police station, immigration
authorities, civil society partners working in this area, child and women welfare committees etc.
\n\n>>> Public awareness and guest notification:
.Messages of intolerance to any form of exploitation must be made evident in appropriate places. Signatories of the code are encouraged to assist tourists with guidance on safety tips applicable to the specific city/place like places to visit,
timings for visits, right dressing and precautions against moving alone, and against accepting eatables and favors from unknown persons etc.
\n\n>>> Regulated use of premises and official equipment:
.Management/owners are encouraged to prohibit usage of the organization\'s premises for use or abuse of illicit substances, sexual violations.
.Individuals under the permitted age shall not be allowed permission in to restricted areas like bars and pubs.
.Tourism service providers shall verify and maintain a record of details pertaining to tourists,personnel and service providers like address, contact details etc and also commit themselves to
maintaining confidentiality.
.Internet usage that promotes, seeks any contacts for sex tourism and other sexual services, for search of pornographic material and/or to solicit the sale and purchase of illicit substances shall be prohibited.
\n\n>>> Ethical business practices and marketing:
Management/owners shall ensure that all
contracts with business partners, suppliers and franchise agreements bear a clause seeking
commitment to provisions of the \'Code of conduct for Safe and Honourable Tourism\' in their businesses.
An unambiguous company policy shall be set up to ensure that marketing and advertising does not
support the promotion of sexual exploitation or promotion of sexually explicit images.
\n\n>>> Implementation and Monitoring:
All signatories are required to maintain an annual report on
\'Code of conduct for Safe and Honourable Tourism\' and submit it to a designated authority.
Management/owners shall report on:
Training and capacity building initiatives carried out for personnel/staff.
Means adopted to raise awareness on safety among guests, personnel and service providers.

</string>
    <string name="t41">KEY MESSAGES FOR AWARENESS BUILDING AND DISSEMINATION
</string>
    <string name="t42">>>>Enhancing safety and security of all tourists -
All signatories of the code are committed to act in a manner that protects the dignity and freedom against exploitation of persons especially women and children and facilitate prevention of incidences of sexual molestation,harassment of their guests and provide assistance in case of an untoward incident.
\n\n>>>In case of exploitation please call the Child line-1098, Women Help lines1091 and/or contact relevant authorities like the police or travel and tour operators.
\n\n>>>Tourists are encouraged to understand local social, cultural norms and beliefs and are encouraged to conduct themselves in a manner that respects these beliefs.
\n\n>>>Tourists are encouraged to seek information from Government of India recognized information centers and visit the Ministry of Tourismâ€™s websites.
\n\n>>>Kidnapping or abducting in order to subject person to grievous hurt, slavery, etc. is an offence under Section 367 of the Indian Penal Code.
\n\n>>>Assault or criminal force to woman with intent to outrage her modesty is an offence under Section 354 of the Indian Penal Code.
</string>
    <string name="t51">ENHANCING SAFETY OF LOCAL PEOPLE</string>
    <string name="t52">Tourists are encouraged to respect the local people and
must commit themselves to acting in adherence to local laws.
\n\n>>>Any guest, staff, partner linked to this agency
found to be indulging in exploitations outlined in this code or supporting it shall be reported to an appropriate authority
\n\n>>>Sexual relationship with a child amounts to rape according to the Indian Penal Code and is punishable with imprisonment of minimum 7 years which can even be extended to life imprisonment
Acquiring or inducing any person (irrespective of age or sex) for prostitution or causing a person to be taken for prostitution is an offence under Section 5 of Immoral Traffic Prevention Act 1956 and with a punishment of 3- 7 years.
\n\n>>>Under section 7 of Immoral Traffic Prevention Act, 1956, letting out a hotel or any part there off for prostitution is an offence for which the license of the hotel can be suspended.
\n\n>>>Narcotics Drugs and Psychotropic Substances (NDPS) Act- Engaging in the production, manufacture, possession, sale, purchase, transportation, warehousing, concealment, use or consumption, import inter-state, export inter-state, import in to India, export from India or transhipment, of narcotic drugs or psychotropic substances is an offence expect for scientific
and medical reasons. Punishment for the offence may imply imprisonment,fine or both.
\n\n>>>Handling or letting out any premises for the carrying on of any of the above mentioned activities in an offence under the NDPS act.
\n\n>>>According to the National Security Act, 1980, the Central
Government or the state Government has the power to act against
any person with a view to prevent him from acting in any manner
prejudicial to the defence of India, the relations of India with foreign powers or the security of India.
The Foreigners (Amendment) Act, 2004 - If a foreigner to the
country acts in violations of the conditions of the valid visa issued to him for his entry and stay in India, shall be punished with imprisonment for a term which may extend to five years and shall also be liable to fine. If he has entered in to a bond, then his bond
shall be fortified.
</string>






</resources>